--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "guzzlehttp/guzzle": "^7.8"
+        "php": "^8.1|^8.2|^8.3",
+        "illuminate/http": "^10.44"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
