--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1|^8.2|^8.3",
-        "illuminate/http": "~10"
+        "illuminate/http": "v10.48.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
