--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.1|^8.2|^8.3",
-        "illuminate/http": "v10.48.8"
+        "php": "^8.2",
+        "illuminate/http": "~11"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
