--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/http": "~10"
+        "php": "^8.0|^8.1",
+        "illuminate/http": "^8.0|^9.0|^10.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
